--- a/Dashboard/Views/_ViewImports.cshtml
+++ b/Dashboard/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using Dashboard
-@namespace Dashboard.Pages
+﻿@using Dashboard
+@using Dashboard.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
