--- a/Dashboard/Views/Home/Index.cshtml
+++ b/Dashboard/Views/Home/Index.cshtml
@@ -1,8 +1,36 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+	ViewData["Title"] = "DevOps";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="col-10">
+ <h4 class="mb-3">Your Azure DevOps projects</h4>
+ <table id="projects" class="table table-striped table-hover table-fw-widget">
+  <thead>
+   <tr>
+	<th>Name</th>
+    <th>ProcessTemplate</th>
+    <th>Days old</th>
+   </tr>
+  </thead>
+ </table>
 </div>
+
+@section Scripts {
+<script type="text/javascript">
+
+$(document).ready( function () {
+	var table = $("#projects").DataTable({
+        ajax: {
+            url: '/Home/GetDevOpsData',
+            dataSrc: ''
+        },
+        columns: [
+            { data: "Name" },
+            { data: "ProcessTemplate" },
+            { data: "ProjectAge" }
+        ]
+	});
+});
+
+</script>
+}
