--- a/Dashboard/Views/Home/Index.cshtml
+++ b/Dashboard/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
  <div class="col-12">
   <h4 class="mb-3">Your Azure DevOps projects</h4>
-  <table id="projects" class="table table-striped">
+  <table id="projects" class="table table-striped display responsive">
    <thead>
 	<tr>
 	 <th>Name</th>
@@ -61,6 +61,7 @@
 				{
 					data: "ProjectAge",
 					width: "30px",
+					className: "text-center",
 					render: function (data, type, row, meta) {
 						return Math.round(data)
 					}
