--- a/Dashboard/Views/Shared/_Layout.cshtml
+++ b/Dashboard/Views/Shared/_Layout.cshtml
@@ -7,19 +7,23 @@
 
     <title>Azure DevOps Dashboard - @ViewData["Title"]</title>
 
-    <link rel="stylesheet" href="https://cdn.datatables.net/v/bs4/jq-3.3.1/dt-1.10.25/datatables.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/v/bs5/jq-3.3.1/dt-1.10.25/datatables.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 <body class="bg-light">
-    <div class="container">
-        <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="/images/logo.png" alt="Microsoft" width="72" height="72">
-            <h2>Azure DevOps Dashboard</h2>
-            <p class="lead">Gain a clear understanding of withs projects there are in your organization.</p>
-        </div>
 
-        @RenderBody()
+    <div class="container">
+        <main>
+            <div class="py-5 text-center">
+                <img class="d-block mx-auto mb-4" src="/images/logo.png" alt="Microsoft" width="72" height="72">
+                <h2>Azure DevOps Dashboard</h2>
+                <p class="lead">Gain a clear understanding of withs projects there are in your organization.</p>
+            </div>
+
+            @RenderBody()
+
+        </main>
 
         <footer class="my-5 pt-5 text-muted text-center text-small">
             <ul class="list-inline">
@@ -31,9 +35,8 @@
         </footer>
     </div>
 
-    <script src="https://cdn.datatables.net/v/bs4/jq-3.3.1/dt-1.10.25/datatables.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.datatables.net/v/bs5/jq-3.3.1/dt-1.10.25/datatables.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
